[gd_scene load_steps=4 format=3 uid="uid://cax0f6sjtwn4c"]

[ext_resource type="Theme" uid="uid://ct8oaedxef61s" path="res://UI/UI_theme.tres" id="1_5f2lt"]
[ext_resource type="Script" path="res://UI/HUD.gd" id="1_pr5q2"]
[ext_resource type="Texture2D" uid="uid://cy847gxma6wme" path="res://Assets/Art/heart.png" id="3_p51gh"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_pr5q2")

[node name="LevelLabel" type="Label" parent="."]
offset_right = 1.0
offset_bottom = 48.0
theme = ExtResource("1_5f2lt")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40

[node name="HealthBar" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2

[node name="Heart" type="TextureRect" parent="HealthBar"]
visible = false
layout_mode = 2
texture = ExtResource("3_p51gh")
stretch_mode = 2

[node name="Container" type="VBoxContainer" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -67.5
offset_right = 70.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Container"]
layout_mode = 2
theme = ExtResource("1_5f2lt")
text = "Change me"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MainButton" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_5f2lt")
text = "To main menu"

[node name="QuitButton" type="Button" parent="Container/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_5f2lt")
text = "Quit game"

[connection signal="pressed" from="Container/VBoxContainer/MainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
